add all web page

--- a/App/Tpl/Index/Case_index.html
+++ b/App/Tpl/Index/Case_index.html
@@ -1,9 +1,9 @@
-<?php if (!defined('THINK_PATH')) exit();?><!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>走进立创</title>
-	<link rel="stylesheet" type="text/css" href="__PUBLIC__/css/aboutUs.min.css">
+	<title>经典案例</title>
+	<link rel="stylesheet" type="text/css" href="__PUBLIC__/css/case.min.css">
 	<script type='text/javascript' src='__PUBLIC__/js/jquery-1.11.1.min.js'></script>
 	<script type='text/javascript' src='__PUBLIC__/js/jquery.particleground.min.js'></script>
 	<script type='text/javascript' src='__PUBLIC__/js/demo.js'></script>
@@ -17,11 +17,11 @@
 			<div class="nav-left">
 				<span class="nav-left-one"><a href="/index.php">ibirty</a></span>
 				<span class="nav-left-two"><a href="/index.php?s=/Index/AboutUs/index.html">走进立创</a></span>
-				<span class="nav-left-two"><a href="/index.php?s=/Index/AboutUs/index.html">新闻动态</a></span>
-				<span class="nav-left-two"><a href="/index.php?s=/Index/AboutUs/index.html">经典案例</a></span>
-				<span class="nav-left-two"><a href="/index.php?s=/Index/AboutUs/index.html">服务项目</a></span>
-				<span class="nav-left-two"><a href="/index.php?s=/Index/AboutUs/index.html">加入立创</a></span>
-				<span class="nav-left-two"><a href="/index.php?s=/Index/AboutUs/index.html">活动需求</a></span>
+				<span class="nav-left-two"><a href="/index.php?s=/Index/News/index.html">新闻动态</a></span>
+				<span class="nav-left-two"><a href="/index.php?s=/Index/Case/index.html">经典案例</a></span>
+				<span class="nav-left-two"><a href="/index.php#service">服务项目</a></span>
+				<span class="nav-left-two"><a href="/index.php?s=/Index/Case/index.html">加入立创</a></span>
+				<span class="nav-left-two"><a href="/index.php#table">活动需求</a></span>
 			</div>
 			<div class="nav-right">
 				<!--<input type="button" class="button" value="注册/登录"/>-->
