update color for dev

--- a/App/Tpl/Index/Table_index.html
+++ b/App/Tpl/Index/Table_index.html
@@ -19,9 +19,9 @@
 				<a href="/index.php?s=/Index/AboutUs/index.html"><span class="nav-left-two">走进立创</span></a>
 				<a href="/index.php?s=/Index/News/index.html"><span class="nav-left-two">新闻动态</span></a>
 				<a href="/index.php?s=/Index/Case/index.html"><span class="nav-left-two">经典案例</span></a>
-				<a href="/index.php#service"><span class="nav-left-two">服务项目</span></a>
-				<a href="/index.php?s=/Index/Case/index.html"><span class="nav-left-two">加入立创</span></a>
-				<a href="/index.php#table"><span class="nav-left-two">活动需求</span></a>
+				<a href="#service"><span class="nav-left-two">服务项目</span></a>
+				<a href="/index.php?s=/Index/Join/index.html"><span class="nav-left-two">加入立创</span></a>
+				<a href="/index.php?s=/Index/Table/index.html"><span class="nav-left-two">活动需求</span></a>
 			</div>
 			<div class="nav-right">
 				<!--<input type="button" class="button" value="注册/登录"/>-->
